# wassette

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  RELEASE.md  component-registry.json  deny.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: auto-tag-release.yml  copilot-setup-steps.yml  examples.yml  prepare-release.yml  release.yml  update-package-manifests.yml
Formula/: wassette.rb
changelog.d/: 516.feature.md  632.misc.md
crates/component2json/: Cargo.toml
crates/component2json/src/: lib.rs
crates/component2json/testdata/: brave-search-rs.wasm  context7-rs.wasm  fetch-rs.wasm
crates/mcp-server/src/: components.rs  prompts.rs  tools.rs
crates/policy/: Cargo.toml
crates/wassette/: Cargo.toml
crates/wassette/src/: config.rs  http.rs  lib.rs  loader.rs  oci_multi_layer.rs  policy_internal.rs  wasistate.rs
examples/fetch-rs/: fetch_rs.metadata.json
scripts/: README.md  changelog_utils.py  test_changelog_utils.py
src/: cli_handlers.rs  commands.rs  config.rs  format.rs  main.rs
tests/: cli_integration_test.rs  fetch_integration_test.rs  oci_integration_test.rs  registry_integration_test.rs
winget/: Microsoft.Wassette.yaml
