[package]
name = "wassette-mcp-server"
version = "0.3.4"
edition = "2021"
license.workspace = true

[workspace]
members = ["crates/*"]

[workspace.package]
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0"
component2json = { path = "crates/component2json" }
etcetera = "0.11"
futures = "0.3"
wassette = { path = "crates/wassette" }
mcp-sdk = "0.0.3"
mcp-server = { path = "crates/mcp-server" }
oci-client = "0.15"
oci-wasm = "0.3"
policy = { path = "crates/policy" }
reqwest = "0.13"
rmcp = "0.9.1"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.24"
test-log = "0.2"
thiserror = "2.0.17"
tokio = "1.47"
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-util = "0.7.18"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
wasmtime = "38.0.4"
wasmtime-wasi = "38.0.4"
wasmtime-wasi-http = "38.0.4"
wasmtime-wasi-config = "38.0.4"

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
etcetera = { workspace = true }
figment = { version = "0.10", features = ["env", "toml"] }
wassette = { workspace = true }
mcp-server = { workspace = true }
oci-client = { workspace = true }
policy = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "transport-sse-server",
    "transport-streamable-http-server",
    "transport-io",
    "macros",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bin]]
name = "wassette"
path = "src/main.rs"

[build-dependencies]
built = { version = "0.8", features = ["git2"] }

[dev-dependencies]
proptest = "1.4"
temp-env = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = { workspace = true }
tempfile = "3.8"
test-log = { version = "0.2", features = ["trace"] }
tokio-test = "0.4"
tracing-test = "0.2"
testcontainers = "0.25.2"
oci-wasm = "0.3"
oci-client = "0.15"
hyper = { version = "1.0", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = "0.1"
futures-util = "0.3.30"
rand = "0.9"
bytes = "1"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rcgen = "0.14"
hex = "0.4"
sha2 = "0.10"

[profile.release]
codegen-units = 1
lto = true
